<resources>
    <string name="app_name">Escáner Nutrimental</string>
    <string name="facebook_app_id">443335242696913</string>

    <string name="url_web">http://elpoderdelconsumidor.org/etiquetado-app/</string>
    <string name="scanner_activity">ZBar Scanner - Full Activity</string>
    <string name="scanner_fragment_activity">ZBar Scanner - Full Fragment Activity</string>
    <string name="simple_scanner_activity">ZBar Scanner - Simple Activity</string>
    <string name="simple_scanner_fragment_activity">ZBar Scanner - Simple Fragment Activity</string>
    <string name="simple_activity_sample">Simple Activity Sample</string>
    <string name="simple_fragment_sample">Simple Fragment Sample</string>
    <string name="activity_sample">Full Activity Sample</string>
    <string name="fragment_sample">Full Fragment Sample</string>
    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>

    <string name="message_camera_permission">Se necesitan permisos de la cámara para continuar</string>

    <string name="toast_validation">Debes llenar al menos los campos iniciales</string>
    <string name="more_information">más información</string>

    <string name="hello_world">Este no deberia de salir</string>
    <string name="hello_blank_fragment">Este no deberia de salir</string>
    <string name="action_settings">Settings</string>
    <string name="apunta_codigo_barras">Apunta al código de barras:</string>

    <string name="que_tanto_sabes_de_lo_que_comes">Selecciona tipo de producto:</string>
    <string name="tipo_alimento">Tipo Alimento</string>
    <string name="tamanio_porcion">Tamaño porción</string>
    <string name="tamanio_porcion_">Tamaño porción:</string>
    <string name="contenido_neto">Contenido neto:</string>
    <string name="azucares">Azúcares:</string>
    <string name="grasa">Grasas saturadas:</string>
    <string name="sodio">Sodio:</string>
    <string name="azucares_">En azúcares</string>
    <string name="grasa_">En grasa saturada</string>
    <string name="sodio_">En sodio</string>
    <string name="no_azucares_">Azúcares</string>
    <string name="no_grasa_">Grasa saturada</string>
    <string name="no_sodio_">Sodio</string>
    <string name="alimento">ALIMENTO</string>
    <string name="bebida">BEBIDA</string>
    <string name="gramos">g</string>
    <string name="kilocalorias">kcal</string>
    <string name="miligramos">mg</string>
    <string name="mililitros">ml</string>
    <string name="limpiar">BORRAR</string>
    <string name="continuar">CONTINUAR</string>
    <string name="calculando">Calculando...</string>
    <string name="nombre_producto">Nombre del producto:</string>
    <string name="title_activity_resultados_nutricion">ResultadosNutricionActivity</string>

    <string name="saber">SABER MÁS</string>
    <string name="otro">Otro Producto</string>
    <string name="compartir">Compartir</string>
    <string name="compartir_">Compartir:</string>


    <string name="ejemplo_producto_bebida">Nombre de la bebida</string>
    <string name="ejemplo_producto_alimento">Nombre del alimento</string>

    <string name="text_explica_nota">OJO: Recuerda que el tamaño de la porción y el contenido neto pueden ser diferentes.</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="lista">Listado</string>
    <string name="nutrimental">Información nutrimental</string>
    <string name="defaul_mensaje">Mensaje: </string>
    <string name="defaul_mensaje_text">Alimentate sanamente </string>
    <string name="no_contiene">No contiene</string>
    <string name="text_explica_title">AYUDA</string>
    <string name="text_explica_important">¡IMPORTANTE!</string>
    <string name="text_explica1">Coloca el código de barras frente a la cámara y toca el botón para escanear el producto.</string>
    <string name="text_explica2">¡Es muy fácil!</string>
    <string name="text_explica3">De no estar el producto en la base de datos, llena el breve formulario.</string>
    <string name="text_explica4">¡Y conoce si tu producto es saludable!</string>
    <string name="text_not_found1">Este producto aún no está en la base de datos.</string>
    <string name="text_not_found2">Busca la <stronge>Información nutrimental:</stronge></string>
    <string name="text_not_found3">1) Está </string>
    <string name="text_not_found4">2) Identifica el tamaño de la</string>
    <string name="not_zugar">Si esta bebida es diferente al agua natural, entonces contiene sustitutos de azúcar como aspartame, acesulfame-k, sucralosa, neotame o stevia. ¡Esto no lo hace más saludable!. No se recomienda para niños. </string>
    <string name="not_zugar1">Si esta bebida es diferente al agua natural, Entonces contiene sustitutos de azúcar como Aspartame, acesulfame-K, sucralosa, neotame o stevia.</string>
    <string name="not_zugar2">¡Esto no lo hace más saludable!</string>
    <string name="not_zugar3">No se recomienda para niños.</string>

    <string name="text_consejo_alimento_rojo">¡¡Evita consumir este producto!!</string>
    <string name="text_consejo_alimento_amarillo_uno">Evita el consumo regular de este producto.</string>
    <string name="text_consejo_alimento_amarillo_dos">Modera el consumo de este producto. Combínalo con alimentos frescos.</string>
    <string name="text_consejo_alimento_verde">Combina este producto con alimentos frescos.</string>

    <string name="text_consejo_bebida_rojo">¡¡Evita consumir este producto!!</string>
    <string name="text_consejo_bebida_amarillo">Modera el consumo de este producto. Combínalo con alimentos frescos.</string>
    <string name="text_consejo_bebida_verde">Combina este producto con alimentos frescos.</string>
    <string name="name_product">Nombre del producto:</string>
    <string name="calorias">Calorías:</string>
    <string name="back_to_scanner">REGRESA \n AL ESCÁNER</string>
    <string name="text_explica_alimento">Si este producto es dulce, revisa en los ingredientes si contiene sustitutos de azúcar como aspartame, acesulfame-K, sucralosa, neotame o stevia.</string>
    <string name="text_explica_alimento_2">¡ESTO NO LO HACE MÁS SALUDABLE!</string>
    <string name="text_explica_alimento_3">¡NO SE RECOMIENDA\n PARA NIÑOS!</string>
    <string name="text_explica_bebida">Si esta bebida es diferente al agua natural y es dulce, entonces contiene sustitutos de azúcar como aspartame, acesulfame-K, sucralosa, neotame o stevia.</string>
    <string name="text_explica4_share">Compartir:</string>
    <string name="text_go">¡Adelante!</string>
    <string name="text_not_found3_2">\s al reverso</string>
    <string name="text_not_found3_3">\s del</string>
    <string name="envase">envase.</string>
    <string name="text_not_found4_1">porción.</string>
</resources>