<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:padding="5dp"
    android:background="@color/yellow_result" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:overScrollMode="never" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/dialogo_acercade_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_black"
                        android:textStyle="bold"
                        android:textSize="@dimen/abc_text_size_medium_material"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:layout_marginBottom="15sp"
                        android:text="@string/text_explica_title" />

                    <TextView
                        android:id="@+id/dialogo_acercade_nota1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/abc_text_size_small_material"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:layout_marginBottom="15sp"
                        android:text="@string/text_explica1" />

                    <TextView
                        android:id="@+id/dialogo_acercade_nota2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/abc_text_size_small_material"
                        android:textColor="@color/text_black"
                        android:gravity="center"
                        android:layout_marginBottom="15sp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/text_explica2" />

                    <TextView
                        android:id="@+id/dialogo_acercade_nota3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/abc_text_size_small_material"
                        android:textColor="@color/text_black"
                        android:gravity="center"
                        android:layout_marginBottom="15sp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/text_explica3" />

                    <TextView
                        android:id="@+id/dialogo_acercade_nota4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/abc_text_size_small_material"
                        android:textColor="@color/text_black"
                        android:gravity="center"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/text_explica4" />

                    <ImageView
                        android:id="@+id/img_help_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/lista_uno"
                        android:layout_gravity="center_horizontal" />

                </LinearLayout>

            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>