<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:padding="5dp"
    android:background="@color/blue_button" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/dialog_close"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical" >
            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:overScrollMode="never" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <poderdelconsumidor.com.semaforonutrimental.customes.CustomeBlackTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_white"
                        android:textSize="27sp"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:layout_marginBottom="5sp"
                        android:text="@string/text_explica_title" />

                    <poderdelconsumidor.com.semaforonutrimental.customes.CustomeNormalTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_white"
                        android:textSize="18sp"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:layout_marginBottom="10sp"
                        android:text="@string/text_explica1" />

                    <poderdelconsumidor.com.semaforonutrimental.customes.CustomeTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_white"
                        android:textSize="25sp"
                        android:layout_marginBottom="7sp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/text_explica2" />

                    <poderdelconsumidor.com.semaforonutrimental.customes.CustomeNormalTextView
                        android:id="@+id/dialogo_acercade_nota3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_white"
                        android:textSize="18sp"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:layout_marginBottom="10sp"
                        android:text="@string/text_explica3" />

                    <poderdelconsumidor.com.semaforonutrimental.customes.CustomeTextView
                        android:id="@+id/dialogo_acercade_nota4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_white"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textSize="25sp"
                        android:layout_marginBottom="10sp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/text_explica4" />

                    <poderdelconsumidor.com.semaforonutrimental.customes.CustomeTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_white"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textSize="22sp"
                        android:layout_marginTop="10sp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/text_explica4_share" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:weightSum="6">

                    <poderdelconsumidor.com.semaforonutrimental.customes.CustomeSemiBoldTextView
                        android:id="@+id/saber_mas_btn"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:background="@drawable/custome_button_white"
                        android:paddingLeft="0sp"
                        android:paddingRight="0sp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:text="@string/saber"
                        android:textSize="21sp"
                        android:textColor="@color/blue_button" />

                    <ImageButton
                        android:id="@+id/btn_facebook"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginRight="3dp"
                        android:layout_marginLeft="3dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:background="@drawable/custome_button_white"
                        android:src="@drawable/ic_facebook" />
                    <ImageButton
                        android:id="@+id/btn_twitter"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginRight="3dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:background="@drawable/custome_button_white"
                        android:src="@drawable/ic_twitter" />
                    <ImageButton
                        android:id="@+id/btn_share"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:layout_weight="1"
                        android:background="@drawable/custome_button_white"
                        android:src="@drawable/ic_share" />
                    </LinearLayout>

                </LinearLayout>

            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>