<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:fillViewport="false"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/selecciona_producto_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/que_tanto_sabes_de_lo_que_comes"
                android:textColor="@color/text_black"
                android:textSize="@dimen/abc_text_size_body_2_material"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:animateLayoutChanges="true"
                android:orientation="horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@color/blue_button"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/bebida_img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_bebida_gris" />

                    <TextView
                        android:id="@+id/bebida_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/bebida_img"
                        android:layout_marginTop="10sp"
                        android:text="@string/bebida"
                        android:textSize="@dimen/abc_text_size_small_material" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10sp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/alimento_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_comida_gris" />

                    <TextView
                        android:id="@+id/alimento_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/alimento_img"
                        android:layout_marginTop="10sp"
                        android:text="@string/alimento"
                        android:textSize="@dimen/abc_text_size_small_material" />

                </RelativeLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_marginBottom="20sp"
                android:layout_marginTop="5sp"
                android:background="@color/text_white"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_product"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/name_product"
                        android:imeOptions="actionUnspecified"
                        android:inputType="number"
                        android:textStyle="bold"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal">

                <TableRow
                    android:id="@+id/row1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:id="@+id/tamanio_porcion_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/tamanio_porcion_"
                        android:textSize="@dimen/abc_text_size_small_material" />

                    <EditText
                        android:id="@+id/edit_tamanio_porcion"
                        android:layout_width="100sp"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:ems="10"
                        android:hint="0.0"
                        android:inputType="phone" />

                    <Spinner
                        android:id="@+id/tamanioPorcionSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2" />
                </TableRow>


                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/azucares_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/azucares"
                        android:textSize="@dimen/abc_text_size_small_material" />

                    <EditText
                        android:id="@+id/entradaAzucares"
                        android:layout_width="100sp"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:ems="10"
                        android:hint="0.0"
                        android:inputType="phone" />

                    <Spinner
                        android:id="@+id/azucaresSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2" />

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/grasa_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/grasa"
                        android:textSize="@dimen/abc_text_size_small_material" />

                    <EditText
                        android:id="@+id/entradaGrasa"
                        android:layout_width="100sp"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:ems="10"
                        android:hint="0.0"
                        android:inputType="phone" />

                    <Spinner
                        android:id="@+id/grasaSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2" />

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">"

                    <TextView
                        android:id="@+id/sodio_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/sodio"
                        android:textSize="@dimen/abc_text_size_small_material" />

                    <EditText
                        android:id="@+id/entradaSodio"
                        android:layout_width="100sp"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:ems="10"
                        android:hint="0.0"
                        android:inputType="phone" />

                    <Spinner
                        android:id="@+id/sodioSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2" />

                </TableRow>

            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/limpiar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_gray"
                    android:padding="2dp"
                    android:text="@string/limpiar"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/abc_text_size_button_material" />

                <Button
                    android:id="@+id/continuar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button"
                    android:padding="2dp"
                    android:text="@string/continuar"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/abc_text_size_button_material" />
            </LinearLayout>
        </LinearLayout>


    </ScrollView>
</RelativeLayout>
